third_party/llvm-project/clang/test/Modules/Inputs/objc-category-2/Base.h
@interface DVTSourceModel // expected-error {{duplicate interface definition for class}} \
                          // expected-note {{previous definition is here}}
@end
